# StarFunc

./: .gitignore  README.md  StarFuncV2.slnx
Backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: cb5a26dbb18c_initial_create_all_tables.py
Backend/src/app/: config.py  dependencies.py  main.py
Backend/src/app/api/middleware/: __init__.py  client_info.py  exception_handler.py  idempotency.py  rate_limiting.py  request_logging.py  server_time.py
Backend/src/app/api/routers/: auth.py
Backend/src/app/api/schemas/: auth.py  common.py
Backend/src/app/domain/: check_models.py  content_models.py  entities.py  enums.py  exceptions.py  models.py  shop_models.py
Backend/src/app/infrastructure/: database.py  redis.py
Backend/src/app/infrastructure/auth/: apple_verifier.py  google_verifier.py  jwt_provider.py
Backend/src/app/infrastructure/cache/: content_cache.py  idempotency_store.py  rate_limiter.py  token_store.py
Backend/src/app/infrastructure/persistence/: models.py  player_repo.py
Backend/src/app/services/: auth_service.py  content_service.py
Backend/src/starfunc_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Backend/tests/: conftest.py
Backend/tests/service/: test_link_account.py
Backend/tests/unit/: test_auth_service.py  test_jwt_provider.py  test_middleware.py  test_placeholder.py  test_redis_integration.py
Docs/: Architecture.md  Backend tasks.md  Design tasks.md  Files structure.md  GDD.md  Mechanics BRD.md  (+4 more)
(+499 files in other folders)
